Prevent expander button squishing

--- a/data/sidebar.css
+++ b/data/sidebar.css
@@ -38,6 +38,7 @@ td {
 
 td.expander {
     width: 25px;
+    min-width: 25px;
 }
 
 td.view-item, td.remove-item {
